完成了一些分类的操作，还有就是用户对商品的修改问题
